--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -8,8 +8,21 @@ $color-otros :rgb(118, 152, 153);
 $color-sanpedro :rgb(177, 99,159);
 $color-tegucigalpa: rgb(89,115,3);
 
+$aventura: rgb(255, 118, 0);
+$buceo: rgb(71, 74, 163);
+$aviturismo: rgb(0, 115, 196);
+$naturaleza: rgb(124, 193, 0);
+$gastronomia : rgb(247, 106, 164);
+$arqueologia: rgb(80, 22, 2);
+$culturasvivas: rgb(0, 171, 158);
+$cultura : rgb(13, 119, 110);
+$solyplaya: rgb(255, 118, 0);
+
+
 $color-1 : #e60000;
 $color-2 : #ff751a;
 $color-3 : #fbb820;
 $color-4 : #94e107;
 $color-5 : #009ae7;
+
+$footer: #1F1F1F;
