--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -34,6 +34,16 @@ table {
 	margin: 0 auto;
 }
 
+
+/**
+ * Icons default 
+**/
+
+.icon{
+	font-size: 2.5rem;
+}
+
+
 ul.horizontal-list{
 	text-align: center;
 	margin-bottom: 0px;
