--- a/scss/components/_type.scss
+++ b/scss/components/_type.scss
@@ -17,6 +17,7 @@
 
 #l-title {
 	margin-bottom: 1.5rem;
+	z-index: 1;
 }
 
 .title {
