--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,7 +6,7 @@
 
 footer {
 	padding-top: 1rem;
-	background: #1F1F1F;
+	background: $footer;
 	.copyright, .menu-footer{
 		color: white;
 		line-height: 3rem;
