--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -33,6 +33,7 @@
 //--------------------------------------------------
 .top-bar {
 	background:white;
+	z-index: 10;
 
   .title-area {
   }
